--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,4 +13,8 @@ endif()
 
 
 enable_testing()
+if(NOT TARGET check)
+    add_custom_target(check)
+    set_property(TARGET check PROPERTY EXCLUDE_FROM_ALL TRUE)
+endif()
 add_subdirectory(test)
