--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ env:
     - CMAKE_BUILD_TYPE=Release
 
 script:
-    - sudo apt install -y -qq boost-dev-all
+    - sudo apt install -y -qq boost-all-dev
     - mkdir build.tmp && cd build.tmp
     - cmake ..
     - make
