--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ env:
 script:
     - mkdir build.tmp && cd build.tmp
     - git clone -b boost-1.63.0 https://github.com/boostorg/asio.git
-    - cmake .. -DCMAKE_CXX_FLAGS=-Iasio/include
+    - cmake .. -DCMAKE_CXX_FLAGS=-I$(pwd)/asio/include
     - make
     - make check
 
