--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,9 @@ env:
 
 script:
     - mkdir build.tmp && cd build.tmp
+    - git clone -b boost-1.63.0 https://github.com/boostorg/config.git
     - git clone -b boost-1.63.0 https://github.com/boostorg/asio.git
-    - cmake .. -DCMAKE_CXX_FLAGS=-I$(pwd)/asio/include
+    - cmake .. -DCMAKE_CXX_FLAGS=-I$(pwd)/config/include -I$(pwd)/asio/include
     - make
     - make check
 
