--- a/.travis.yml
+++ b/.travis.yml
@@ -16,9 +16,10 @@ script:
     - git clone -b boost-1.63.0 https://github.com/boostorg/asio.git
     - git clone -b boost-1.63.0 https://github.com/boostorg/assert.git
     - git clone -b boost-1.63.0 https://github.com/boostorg/config.git
+    - git clone -b boost-1.63.0 https://github.com/boostorg/core.git
     - git clone -b boost-1.63.0 https://github.com/boostorg/predef.git
     - git clone -b boost-1.63.0 https://github.com/boostorg/system.git
-    - cmake .. -DCMAKE_CXX_FLAGS="-I$(pwd)/asio/include -I$(pwd)/assert/include -I$(pwd)/config/include -I$(pwd)/predef/include -I$(pwd)/system/include"
+    - cmake .. -DCMAKE_CXX_FLAGS="-I$(pwd)/asio/include -I$(pwd)/assert/include -I$(pwd)/config/include -I$(pwd)/core/include -I$(pwd)/predef/include -I$(pwd)/system/include"
     - make
     - make check
 
