--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ env:
 
 script:
     - mkdir build.tmp && cd build.tmp
-    - git clone git@github.com:KayEss/fost-boost.git
+    - git clone https://github.com/KayEss/fost-boost.git
     - cmake -C fost-boost
     - cmake .. -DCMAKE_CXX_FLAGS="-I$(pwd)/fost-boost/boost/1_62_0/$CC/$(echo CMAKE_BUILD_TYPE | s/Debug/debug/ | sed s/Release/release/)/"
     - make
