Need to do a real CD.

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,7 @@ env:
 script:
     - mkdir build.tmp && cd build.tmp
     - git clone https://github.com/KayEss/fost-boost.git
-    - cmake -C fost-boost
-    - cmake .. -DCMAKE_CXX_FLAGS="-I$(pwd)/fost-boost/boost/1_62_0/$CC/$(echo CMAKE_BUILD_TYPE | s/Debug/debug/ | sed s/Release/release/)/"
+    - cd fost-boost && cmake . && cd ..
+    - cmake .. -DCMAKE_CXX_FLAGS="-I$(pwd)/fost-boost/boost/1_62_0/$CC/$(echo CMAKE_BUILD_TYPE | sed s/Debug/debug/ | sed s/Release/release/)/"
     - make
     - make check
-
