Fix a path and try to cache Boost build.

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,15 @@ env:
     - CMAKE_BUILD_TYPE=Debug
     - CMAKE_BUILD_TYPE=Release
 
+cache:
+  directories:
+    boost-cache
+
 script:
-    - mkdir build.tmp && cd build.tmp
+    - mkdir boost-cache build.tmp && cd build.tmp
     - git clone https://github.com/KayEss/fost-boost.git
+    - ln -s ../boost-cache fost-boost/boost
     - cd fost-boost && cmake . && cd ..
-    - cmake .. -DCMAKE_CXX_FLAGS="-I$(pwd)/fost-boost/boost/1_62_0/$CC/$(echo $CMAKE_BUILD_TYPE | s/Debug/debug/ | sed s/Release/release/)/"
-    - make
-    - make check
+    - cmake .. -DCMAKE_CXX_FLAGS="-I$(pwd)/fost-boost/boost/1_66_0/$CC/$(echo $CMAKE_BUILD_TYPE | s/Debug/debug/ | sed s/Release/release/)/"
+    - make -n
+    - make -n check
