Fix a number of paths and add back in missing sed command.

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,10 +16,10 @@ cache:
     boost-cache
 
 script:
-    - mkdir boost-cache build.tmp && cd build.tmp
+    - mkdir build.tmp && cd build.tmp
     - git clone https://github.com/KayEss/fost-boost.git
-    - ln -s ../boost-cache fost-boost/boost
+    - ln -s ../../boost-cache fost-boost/boost
     - cd fost-boost && cmake . && cd ..
-    - cmake .. -DCMAKE_CXX_FLAGS="-I$(pwd)/fost-boost/boost/1_66_0/$CC/$(echo $CMAKE_BUILD_TYPE | s/Debug/debug/ | sed s/Release/release/)/"
+    - cmake .. -DCMAKE_CXX_FLAGS="-I$(pwd)/fost-boost/boost/1_66_0/$CC/$(echo $CMAKE_BUILD_TYPE | sed s/Debug/debug/ | sed s/Release/release/)/"
     - make -n
     - make -n check
