--- a/test/run/CMakeLists.txt
+++ b/test/run/CMakeLists.txt
@@ -1,6 +1,12 @@
+find_package(Threads)
+
 function(runtest name)
     add_executable(threading-run-test-${name} EXCLUDE_FROM_ALL ${name}.cpp)
-    target_link_libraries(threading-run-test-${name} f5-threading boost_system)
+    target_link_libraries(threading-run-test-${name}
+        ${CMAKE_THREAD_LIBS_INIT}
+        boost_system
+        f5-threading
+    )
     add_custom_command(TARGET threading-run-test-${name}
         POST_BUILD COMMAND threading-run-test-${name})
     add_dependencies(check threading-run-test-${name})
