Add a basic test for the unlimited limiter.

--- a/test/run/CMakeLists.txt
+++ b/test/run/CMakeLists.txt
@@ -4,6 +4,7 @@ function(runtest name)
     add_executable(threading-run-test-${name} EXCLUDE_FROM_ALL ${name}.cpp)
     target_link_libraries(threading-run-test-${name}
         ${CMAKE_THREAD_LIBS_INIT}
+        boost_coroutine
         boost_system
         f5-threading
     )
