--- a/.travis.yml
+++ b/.travis.yml
@@ -14,15 +14,18 @@ cache:
   directories:
     boost-cache
 
-script:
+install:
     - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
     - sudo apt-get update -qq
-    - sudo apt-get install -qq -y g++-7
+    - sudo apt-get install -qq -y ninja-build g++-8
+
+script:
     - mkdir build.tmp && cd build.tmp
-    - 'if [ "$CXX" = "g++" ]; then export CC=gcc-7; export CXX=g++-7; fi'
+    - 'if [ "$CXX" = "g++" ]; then export CC=gcc-8; export CXX=g++-8; fi'
     - git clone https://github.com/KayEss/fost-boost.git
     - ln -s ../../boost-cache fost-boost/boost
     - cp ../.travis.CMakeLists.txt CMakeLists.txt
-    - cmake . -DCMAKE_BUILD_TYPE=$CMAKE_BUILD_TYPE
-    - make VERBOSE=1
-    - make VERBOSE=1 check
+    - cmake . -DCMAKE_BUILD_TYPE=$CMAKE_BUILD_TYPE -G Ninja
+    - ninja
+    - ninja check
+
