Enable the tests

--- a/test/run/CMakeLists.txt
+++ b/test/run/CMakeLists.txt
@@ -11,6 +11,8 @@ function(runtest name)
     )
     add_custom_command(TARGET threading-run-test-${name}
         POST_BUILD COMMAND threading-run-test-${name})
+    add_dependencies(check threading-run-test-${name})
+    add_test(NAME threading-run-test-${name}-test COMMAND threading-run-test-${name})
 endfunction(runtest)
 
 runtest(limiters-unlimited-blocking)
